syntax = "proto3";

package PostComment;

message Post {
  int32 id = 1;
}

message User{
  string first_name = 1;
  string last_name = 2;
}

message Comment {
  string id = 1;
  User user = 2;
  string body = 4;
}

message Comments {
  repeated Comment comments = 1;
}

service CommentService  {
  rpc GetComments(Post) returns (Comments) {}
}